--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
         </section>
         <section>
             <h2>Nossa Equipe</h2>
-            <p>A equipe da Social Connect é ...</p>
+            <p>A equipe da Social Connect c destaca pela alta performance e pela sua segurança.
+                O time de desenvolvedores é altamente preparados para desenvolver o que há de melhor, com as melhores teccnologias.
+            </p>
             <img src="imagens/equipe.jpg" alt="Nossa Equipe">
         </section>
         <section>
