Correção no texto "Nossa equipe"

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
         </section>
         <section>
             <h2>Nossa Equipe</h2>
-            <p>A equipe da Social Connect c destaca pela alta performance e pela sua segurança.
-                O time de desenvolvedores é altamente preparados para desenvolver o que há de melhor, com as melhores teccnologias.
+            <p>A equipe da Social Connect se destaca pela alta performance e pela sua segurança.
+                O time de desenvolvedores são altamente preparados para desenvolver o que há de melhor, com as melhores tecnologias.
             </p>
             <img src="imagens/equipe.jpg" alt="Nossa Equipe">
         </section>
