--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </main>
     <footer>
         <section>
-        <p>&copy; 2024 Social Connect. Tds s dritos rsedos.</p>
+        <p>&copy; 2024 Social Connect. Todos os direitos reservados. ©</p>
         </section>
         <section id="socialmedia">
             <span>xxxxx</span>
